--- a/SSD-Alkolq/Pages/ShoppingCart/Index.cshtml
+++ b/SSD-Alkolq/Pages/ShoppingCart/Index.cshtml
@@ -42,5 +42,5 @@
 </table>
 
 <form asp-page-handler="AddToCart" method="POST">
-    <button type="submit">Checkout</button>
+    <button type="submit" class="btn btn-primary">Checkout <i class="fas fa-credit-card pl-1"></i></button>
 </form>
