--- a/SSD-Alkolq/Pages/ShoppingCart/Edit.cshtml
+++ b/SSD-Alkolq/Pages/ShoppingCart/Edit.cshtml
@@ -7,23 +7,13 @@
 
 <h1>Edit</h1>
 
-<h4>ShoppingCartItem</h4>
+<h4>@Model.ShoppingCartItem.AlcoholProduct.Name</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
         <form method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input type="hidden" asp-for="ShoppingCartItem.ID" />
-            <div class="form-group">
-                <label asp-for="ShoppingCartItem.UserID" class="control-label"></label>
-                <input asp-for="ShoppingCartItem.UserID" class="form-control" />
-                <span asp-validation-for="ShoppingCartItem.UserID" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="ShoppingCartItem.AlcoholProductID" class="control-label"></label>
-                <select asp-for="ShoppingCartItem.AlcoholProductID" class="form-control" asp-items="ViewBag.AlcoholProductID"></select>
-                <span asp-validation-for="ShoppingCartItem.AlcoholProductID" class="text-danger"></span>
-            </div>
+            <input type="hidden" value="@Model.ShoppingCartItem.ID" name="id" />
             <div class="form-group">
                 <label asp-for="ShoppingCartItem.Quantity" class="control-label"></label>
                 <input asp-for="ShoppingCartItem.Quantity" class="form-control" />
