--- a/SSD-Alkolq/Pages/ShoppingCart/Index.cshtml
+++ b/SSD-Alkolq/Pages/ShoppingCart/Index.cshtml
@@ -2,43 +2,43 @@
 @model SSD_Alkolq.Pages.ShoppingCart.IndexModel
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "My Shopping Cart";
 }
 
-<h1>Index</h1>
+<h1>My Shopping Cart</h1>
 
-<p>
-  <a asp-page="Create">Create New</a>
-</p>
 <table class="table">
-  <thead>
-    <tr>
-      <th>
-        @Html.DisplayNameFor(model => model.ShoppingCartItems[0].AlcoholProduct)
-      </th>
-      <th>
-        @Html.DisplayNameFor(model => model.ShoppingCartItems[0].Quantity)
-      </th>
-      <th></th>
-    </tr>
-  </thead>
-  <tbody>
-    @foreach (var item in Model.ShoppingCartItems) {
-    <tr>
-      <td>
-        @Html.DisplayFor(modelItem => item.AlcoholProduct.Name)
-      </td>
-      <td>
-        @Html.DisplayFor(modelItem => item.Quantity)
-      </td>
-      <td>
-        <a asp-page="./Edit" asp-route-id="@item.ID">Edit</a> |
-        <a asp-page="./Details" asp-route-id="@item.ID">Details</a> |
-        <a asp-page="./Delete" asp-route-id="@item.ID">Delete</a>
-      </td>
-    </tr>
-}
-  </tbody>
+    <thead>
+        <tr>
+            <th>
+                @Html.DisplayNameFor(model => model.ShoppingCartItems[0].AlcoholProduct)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.ShoppingCartItems[0].Quantity)
+            </th>
+            <th></th>
+        </tr>
+    </thead>
+    <tbody>
+        @foreach (var item in Model.ShoppingCartItems)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.AlcoholProduct.Name)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Quantity)
+                </td>
+                <td>
+                    <form asp-page-handler="DeleteCartItem" method="POST">
+                        <input type="hidden" value="@item.ID" name="id" />
+                        <a asp-page="./Edit" asp-route-id="@item.ID" class="btn btn-light text-primary">Edit <i class="far fa-edit pl-1"></i></a>
+                        <button type="submit" class="btn btn-light text-danger"><i class="far fa-trash-alt"></i></button>
+                    </form>
+                </td>
+            </tr>
+        }
+    </tbody>
 </table>
 
 <form asp-page-handler="AddToCart" method="POST">
