--- a/SSD-Alkolq/wwwroot/css/site.css
+++ b/SSD-Alkolq/wwwroot/css/site.css
@@ -69,3 +69,14 @@ body {
   white-space: nowrap;
   line-height: 60px; /* Vertically center the text there */
 }
+
+
+/* Custom font
+-------------------------------------------------- */
+h1 {
+    font-family: 'Yeseva One', cursive;
+}
+
+h4 {
+    font-family: 'Anaheim', sans-serif;
+}
