--- a/SSD-Alkolq/Pages/ShoppingCart/Index.cshtml
+++ b/SSD-Alkolq/Pages/ShoppingCart/Index.cshtml
@@ -7,40 +7,49 @@
 
 <h1>My Shopping Cart</h1>
 
-<table class="table">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.ShoppingCartItems[0].AlcoholProduct)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.ShoppingCartItems[0].Quantity)
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-        @foreach (var item in Model.ShoppingCartItems)
-        {
+@if (Model.HasAnyCartItem())
+{
+    <table class="table">
+        <thead>
             <tr>
-                <td>
-                    @Html.DisplayFor(modelItem => item.AlcoholProduct.Name)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Quantity)
-                </td>
-                <td>
-                    <form asp-page-handler="DeleteCartItem" method="POST">
-                        <input type="hidden" value="@item.ID" name="id" />
-                        <a asp-page="./Edit" asp-route-id="@item.ID" class="btn btn-light text-primary">Edit <i class="far fa-edit pl-1"></i></a>
-                        <button type="submit" class="btn btn-light text-danger"><i class="far fa-trash-alt"></i></button>
-                    </form>
-                </td>
+                <th>
+                    @Html.DisplayNameFor(model => model.ShoppingCartItems[0].AlcoholProduct)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.ShoppingCartItems[0].Quantity)
+                </th>
+                <th></th>
             </tr>
-        }
-    </tbody>
-</table>
+        </thead>
+        <tbody>
+            @foreach (var item in Model.ShoppingCartItems)
+            {
+                <tr>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.AlcoholProduct.Name)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Quantity)
+                    </td>
+                    <td>
+                        <form asp-page-handler="DeleteCartItem" method="POST">
+                            <input type="hidden" value="@item.ID" name="id" />
+                            <a asp-page="./Edit" asp-route-id="@item.ID" class="btn btn-light text-primary">Edit <i class="far fa-edit pl-1"></i></a>
+                            <button type="submit" class="btn btn-light text-danger"><i class="far fa-trash-alt"></i></button>
+                        </form>
+                    </td>
+                </tr>
+            }
+        </tbody>
+    </table>
 
-<form asp-page-handler="AddToCart" method="POST">
-    <button type="submit" class="btn btn-primary">Checkout <i class="fas fa-credit-card pl-1"></i></button>
-</form>
+    <form asp-page-handler="AddToCart" method="POST">
+        <button type="submit" class="btn btn-primary">Checkout <i class="fas fa-credit-card pl-1"></i></button>
+    </form>
+}
+else
+{
+    <p class="mt-3">
+        You do not have any Alcohol product in cart. <a asp-page="/AlcoholProducts/Index">Click here to discover</a>!
+    </p>
+}
