--- a/SSD-Alkolq/Pages/Shared/_Layout.cshtml
+++ b/SSD-Alkolq/Pages/Shared/_Layout.cshtml
@@ -34,15 +34,15 @@
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle text-dark" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" asp-area="">Types of Alcohol</a>
                             <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                                <a class="dropdown-item" asp-page="/AlcoholTypes/Beer">Beer</a>
-                                <a class="dropdown-item" asp-page="/AlcoholTypes/RedWine">Red Wine</a>
-                                <a class="dropdown-item" asp-page="/AlcoholTypes/WhiteWine">White Wine</a>
-                                <a class="dropdown-item" asp-page="/AlcoholTypes/Whisky">Whisky</a>
-                                <a class="dropdown-item" asp-page="/AlcoholTypes/Vodka">Vodka</a>
-                                <a class="dropdown-item" asp-page="/AlcoholTypes/Brandy">Brandy</a>
-                                <a class="dropdown-item" asp-page="/AlcoholTypes/Tequila">Tequila</a>
-                                <a class="dropdown-item" asp-page="/AlcoholTypes/Gin">Gin</a>
-                                <a class="dropdown-item" asp-page="/AlcoholTypes/Rum">Rum</a>
+                                <a class="dropdown-item" asp-page="/AlcoholProducts/Types" asp-route-typeName="Beer">Beer</a>
+                                <a class="dropdown-item" asp-page="/AlcoholProducts/Types" asp-route-typeName="Red Wine">Red Wine</a>
+                                <a class="dropdown-item" asp-page="/AlcoholProducts/Types" asp-route-typeName="White Wine">White Wine</a>
+                                <a class="dropdown-item" asp-page="/AlcoholProducts/Types" asp-route-typeName="Whisky">Whisky</a>
+                                <a class="dropdown-item" asp-page="/AlcoholProducts/Types" asp-route-typeName="Vodka">Vodka</a>
+                                <a class="dropdown-item" asp-page="/AlcoholProducts/Types" asp-route-typeName="Brandy">Brandy</a>
+                                <a class="dropdown-item" asp-page="/AlcoholProducts/Types" asp-route-typeName="Tequila">Tequila</a>
+                                <a class="dropdown-item" asp-page="/AlcoholProducts/Types" asp-route-typeName="Gin">Gin</a>
+                                <a class="dropdown-item" asp-page="/AlcoholProducts/Types" asp-route-typeName="Rum">Rum</a>
                             </div>
                         </li>
                     </ul>
