--- a/SSD-Alkolq/Pages/ShoppingCart/Index.cshtml
+++ b/SSD-Alkolq/Pages/ShoppingCart/Index.cshtml
@@ -5,7 +5,7 @@
     ViewData["Title"] = "My Shopping Cart";
 }
 
-<h1>My Shopping Cart</h1>
+<h1 class="mb-3 text-center">My Shopping Cart</h1>
 
 @if (Model.HasAnyCartItem())
 {
@@ -49,7 +49,7 @@
 }
 else
 {
-    <p class="mt-3">
+    <p class="text-center">
         You do not have any Alcohol product in cart. <a asp-page="/AlcoholProducts/Index">Click here to discover</a>!
     </p>
 }
