--- a/SSD-Alkolq/Pages/AlcoholProducts/Details.cshtml
+++ b/SSD-Alkolq/Pages/AlcoholProducts/Details.cshtml
@@ -48,13 +48,24 @@
             <dd class="col-sm-10">
                 @Html.DisplayFor(model => model.AlcoholProduct.ListDate)
             </dd>
+            @if (Model.ItemInCart)
+            {
+                <form class="m-3">
+                    <a asp-page="/ShoppingCart/Index" class="btn btn-secondary text-light">
+                        Already in Cart <i class="fas fa-external-link-alt ml-1"></i>
+                    </a>
+                </form>
+            }
+            else
+            {
+                <form asp-page-handler="AddToCart" method="post" class="m-3">
+                    <input type="hidden" value="@Model.AlcoholProduct.ID" name="id" />
+                    <button class="btn btn-primary">Add to Cart</button>
+                </form>
+            }
         </div>
     </dl>
 </div>
-<form asp-page-handler="AddToCart" method="post">
-    <input type="hidden" value="@Model.AlcoholProduct.ID" name="id" />
-    <button class="btn btn-primary">Add to Cart</button>
-</form>
 <div>
     <a asp-page="./Edit" asp-route-id="@Model.AlcoholProduct.ID">Edit</a> |
     <a asp-page="./Index">Back to List</a>
